<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_shell_bridge</name>
  <version>0.0.0</version>
  <description>The carla_shell_bridge package. Creates an interface between student code packages and the CARLA ROS Bridge for vehicle control topics.</description>

  <maintainer email="dbeer@swri.org">Dan Beer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>carla_msgs</depend>
  <depend>nodelet</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>swri_nodelet</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
